--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "migration:create": "typeorm-ts-node-commonjs migration:create",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/datasource.ts",
-    "migration:up": "typeorm-ts-node-commonjs migration:run -d src/datasource.ts",
-    "migration:down": "typeorm-ts-node-commonjs migration:revert -d src/datasource.ts"
+    "typeorm": "typeorm-ts-node-commonjs -d src/datasource.ts",
+    "migration:generate": "npm run typeorm migration:generate",
+    "migration:up": "npm run typeorm migration:run",
+    "migration:down": "npm run typeorm migration:revert",
+    "migration:create": "typeorm-ts-node-commonjs migration:create"
   },
   "author": "",
   "license": "ISC",
